src/agent/cli/product/tui_app/src/snapshots/lha_cli__product__tui_app__history_cell__tests__coalesced_reads_dedupe_names.snap
---
source: src/agent/cli/src/../product/tui_app/src/history_cell.rs
expression: rendered
---
• Exploring
  └ Read auth.rs, shimmer.rs
