src/agent/cli/product/tui_app/src/snapshots/lha_cli__product__tui_app__history_cell__tests__coalesces_reads_across_multiple_calls.snap
---
source: src/agent/cli/src/../product/tui_app/src/history_cell.rs
expression: rendered
---
• Exploring
  └ Search shimmer_spans
    Read shimmer.rs, status_indicator_widget.rs
