src/agent/cli/product/tui_app/src/snapshots/lha_cli__product__tui_app__history_cell__tests__coalesces_sequential_reads_within_one_call.snap
---
source: src/agent/cli/src/../product/tui_app/src/history_cell.rs
expression: rendered
---
• Exploring
  └ Search shimmer_spans
    Read shimmer.rs
    Read status_indicator_widget.rs
