src/agent/cli/product/tui_app/src/snapshots/lha_cli__product__tui_app__history_cell__tests__completed_mcp_tool_call_error_snapshot.snap
---
source: src/agent/cli/src/../product/tui_app/src/history_cell.rs
expression: rendered
---
• Called search.find_docs({"query":"ratatui styling","limit":3})
  └ Error: network timeout
