src/agent/cli/product/tui_app/src/snapshots/lha_cli__product__tui_app__history_cell__tests__completed_mcp_tool_call_multiple_outputs_inline_snapshot.snap
---
source: src/agent/cli/src/../product/tui_app/src/history_cell.rs
expression: rendered
---
• Called metrics.summary({"metric":"trace.latency","window":"15m"})
  └ Latency summary: p50=120ms, p95=480ms.
    No anomalies detected.
