src/agent/cli/product/tui_app/src/snapshots/lha_cli__product__tui_app__history_cell__tests__multiline_command_both_lines_wrap_with_correct_prefixes.snap
---
source: src/agent/cli/src/../product/tui_app/src/history_cell.rs
expression: rendered
---
• Ran first_token_is_long_en
  │ ough_to_wrap
  │ second_token_is_also_lon
  │ … +1 lines
  └ (no output)
