src/agent/cli/product/tui_app/src/snapshots/lha_cli__product__tui_app__history_cell__tests__multiline_command_without_wrap_uses_branch_then_eight_spaces.snap
---
source: src/agent/cli/src/../product/tui_app/src/history_cell.rs
expression: rendered
---
• Ran echo one
  │ echo two
  └ (no output)
